--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
