--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@iconify/react": "^4.0.0",
+    "@mui/icons-material": "^5.11.0",
     "@mui/joy": "^5.0.0-alpha.62",
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.10.9",
