--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,12 @@ pytz==2021.3
 django-cors-headers==3.7.0
 django-environ==0.4.5
 
+# psycopg2==2.9.3
 psycopg2-binary==2.9.5
 
 Pillow==9.4.0
 
 django-ckeditor==6.1.0
 
-waitress
 
-whitenoise
+whitenoise==6.3.0
