--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
-# core/.env
-# .env
+core/.env
+.env
 
 npm-debug.log*
 yarn-debug.log*
